# launchguard-demo-warehouse

./: .gitignore  README.md  launchguard.yml
scripts/: generate_map.sh  generate_map_pipeline.yml  map_explorer.py
src/warehouse_bot/: CMakeLists.txt  package.xml
src/warehouse_bot/config/: nav2_params.yaml
src/warehouse_bot/launch/: warehouse_nav.launch.py
src/warehouse_bot/maps/: warehouse.pgm  warehouse.yaml
src/warehouse_bot/scripts/: navigate_warehouse.py
src/warehouse_bot/test/: test_navigate_to_goal.py  test_safe_distance.py
